--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "@ngrx/store": "^8.4.0",
     "build": "0.1.4",
     "com.telerik.plugins.nativepagetransitions": "^0.6.5",
     "cordova-android": "8.0.0",
